crates/vize_atelier_vapor/tests/davinci_vapor_upstream_parity/snapshots/davinci_vapor_upstream_parity__dynamic_content__dynamic_content_component_reference.snap
---
source: crates/vize_atelier_vapor/tests/davinci_vapor_upstream_parity/dynamic_content.rs
expression: compiled.code
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, child as _child, txt as _txt, toDisplayString as _toDisplayString, setText as _setText, setInsertionState as _setInsertionState, renderEffect as _renderEffect, template as _template } from 'vue';
const t0 = _template("<b data-id=\"content\"> : </b>")
const t1 = _template("<main data-id=\"root\"><!----><i data-id=\"tail\">tail</i></main>", true)

export function render(_ctx) {
  const n1 = t1()
  const n2 = _child(n1)
  const _component_MyComp = _resolveComponent("MyComp")
  let _slot0_0
  _setInsertionState(n1, n2)
  const n0 = _createComponentWithFallback(_component_MyComp, { value: () => (_ctx.childValue) }, {
    $: [
      () => ({
        name: _ctx.selected,
        fn: _slot0_0 || (_slot0_0 = (_slotProps0) => {
          const n3 = t0()
          const x3 = _txt(n3)
          _renderEffect(() => _setText(x3, _toDisplayString(_ctx.label) + ":" + _toDisplayString(_slotProps0.value)))
          return n3
        })
      })
    ]
  }, true)
  return n1
}
